--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,8 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
+  background-color: #f7f7f7;
+  width: 80%;
   margin: 0 auto;
   padding: 2rem;
 
@@ -11,13 +12,34 @@
 a,
 .green {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
   transition: 0.4s;
+  color: #000;
+  font-weight: 500;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.mb-4 {
+  margin-bottom: 4em;
+}
+
+.mb-0 {
+  margin-bottom: 0;
+}
+
+.m-1 {
+  margin-bottom: 1em;
+}
+
+.mb-2 {
+  margin-bottom: 2rem;
 }
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    color: rgb(56, 103, 255);
   }
 }
 
@@ -27,9 +49,9 @@ a,
     place-items: center;
   }
 
-  #app {
+  /* #app {
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
-  }
+  } */
 }
